// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar SidebarItem renders 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #E8EAED;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  color: #1B2029;
  fill: #1B2029;
  height: 100%;
  overflow-x: hidden;
  -webkit-transition: width 150ms ease-in-out,-webkit-transform 150ms ease-in-out;
  transition: width 150ms ease-in-out,transform 150ms ease-in-out;
}

@media (min-width: 0) {
  .emotion-0 {
    width: 240px;
  }
}

@media (min-width: 1200px) {
  .emotion-0 {
    width: 280px;
  }
}

.emotion-1 {
  height: 100%;
}

@media (min-width: 0) {
  .emotion-1 {
    min-width: 240px;
  }
}

@media (min-width: 1200px) {
  .emotion-1 {
    min-width: 280px;
  }
}

.emotion-2 {
  background-color: #E8EAED;
  cursor: pointer;
  opacity: 1;
  text-transform: capitalize;
  padding: 0 24px;
}

.emotion-2 * {
  cursor: unset;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:focus-within {
  background-color: #DDDFE2;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:focus-within,
.emotion-2:hover a,
.emotion-2:focus a,
.emotion-2:focus-within a {
  outline: none;
}

.emotion-3 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-3:visited {
  color: inherit;
}

<div
    class="emotion-0"
  >
    <nav
      class="emotion-1"
    >
      <li
        class="emotion-2"
        data-cy="sidebarItem"
      >
        <a
          class="emotion-3"
          href="http://google.com"
          rel="noopener"
          target="_blank"
        >
          Item label
        </a>
      </li>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Sidebar SidebarItemLabel renders 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-0>div {
  width: auto;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-right: 16px;
  line-height: 0;
}

.emotion-2 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-2 use {
  pointer-events: none;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="product-components-inverse icon"
        class="emotion-2"
        data-cy="icon"
        height="24"
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width="24"
      >
        <use
          xlink:href="#product-components-inverse"
        />
      </svg>
    </div>
    <div
      class="emotion-3"
    >
      Item label
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sidebar SidebarSection renders 1`] = `
<DocumentFragment>
  .emotion-0 {
  text-transform: capitalize;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 12px;
  padding-top: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  color: #828487;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 0;
  margin-top: 0;
}

.emotion-0>div {
  width: auto;
}

.emotion-1 {
  margin: 0;
  list-style: none;
  margin-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

<div
    data-cy="sidebarSection"
  >
    <h3
      class="emotion-0"
    >
      Label
    </h3>
    <ul
      class="emotion-1"
    >
      <div>
        Sidebar section content
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Sidebar SidebarSubMenu renders 1`] = `<DocumentFragment />`;

exports[`Sidebar SidebarSubMenuItem renders 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-0>div {
  width: auto;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-right: 16px;
  line-height: 0;
}

.emotion-2 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-2 use {
  pointer-events: none;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="product-components-inverse icon"
        class="emotion-2"
        data-cy="icon"
        height="24"
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width="24"
      >
        <use
          xlink:href="#product-components-inverse"
        />
      </svg>
    </div>
    <div
      class="emotion-3"
    >
      Item label
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sidebar renders 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #E8EAED;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  color: #1B2029;
  fill: #1B2029;
  height: 100%;
  overflow-x: hidden;
  -webkit-transition: width 150ms ease-in-out,-webkit-transform 150ms ease-in-out;
  transition: width 150ms ease-in-out,transform 150ms ease-in-out;
}

@media (min-width: 0) {
  .emotion-0 {
    width: 240px;
  }
}

@media (min-width: 1200px) {
  .emotion-0 {
    width: 280px;
  }
}

.emotion-1 {
  height: 100%;
}

@media (min-width: 0) {
  .emotion-1 {
    min-width: 240px;
  }
}

@media (min-width: 1200px) {
  .emotion-1 {
    min-width: 280px;
  }
}

<div
    class="emotion-0"
  >
    <nav
      class="emotion-1"
    >
      Sidebar content
    </nav>
  </div>
</DocumentFragment>
`;
